--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
-	"appid": "wxd5d28f91e9c2c730",
+	"appid": "wx3867d9affccad48a",
 	"projectname": "insurance-dolphin-wx",
 	"debugOptions": {
 		"hidedInDevtools": []
