--- a/app.json
+++ b/app.json
@@ -4,8 +4,8 @@
     "pages/order/writeOrder",
     "pages/detail/showDetail",
     "pages/logs/logs",
-    "pages/success/success"
-    
+    "pages/success/success",
+    "pages/instructions/instructions"
   ],
   "window": {
     "backgroundTextStyle": "light",
